--- a/.sqa/config.yml
+++ b/.sqa/config.yml
@@ -1,68 +1,66 @@
 config:
   credentials: []
   project_repos:
+    bitbucket.org/cessda/cessda.cvs.two:
+      branch: 450-improve-SQA-rating
+      repo: https://bitbucket.org/cessda/cessda.cvs.two/
     github.com/EOSC-synergy/sqaaas-tooling:
       branch: release/1.7.4
       repo: https://github.com/EOSC-synergy/sqaaas-tooling
-    github.com/indigo-dc/udocker:
-      branch: devel3
-      repo: https://github.com/indigo-dc/udocker/
 environment:
   JPL_DOCKERFORCEBUILD: enabled
   JPL_KEEPGOING: enabled
 sqa_criteria:
   QC.Acc:
     repos:
-      github.com/indigo-dc/udocker git:
+      bitbucket.org/cessda/cessda.cvs.two git:
         commands:
-        - /usr/bin/env sh .sqa/script.shabby-green-sheepdog.sh
-        container: qc.acc_pokey-bistre-jellyfish
+        - /usr/bin/env sh .sqa/script.homely-ecru-abyssinian.sh
+        container: qc.acc_snazzy-platinum-rat
   QC.Doc:
     repos:
-      github.com/indigo-dc/udocker find_doc_files.py:
+      bitbucket.org/cessda/cessda.cvs.two find_doc_files.py:
         commands:
-        - /usr/bin/env sh .sqa/script.frumpy-myrtle-baboon.sh
-        container: qc.doc_sleepy-tangerine-wolfhound
-      github.com/indigo-dc/udocker git:
+        - /usr/bin/env sh .sqa/script.stealthy-dandelion-kakapo.sh
+        container: qc.doc_clammy-heliotrope-olm
+      bitbucket.org/cessda/cessda.cvs.two git:
         commands:
-        - /usr/bin/env sh .sqa/script.chewy-ivory-gecko.sh
-        container: qc.doc_nerdy-gamboge-dalmatian
-      github.com/indigo-dc/udocker markdownlint:
+        - /usr/bin/env sh .sqa/script.lumpy-beige-beagle.sh
+        container: qc.doc_pretty-brass-iguana
+      bitbucket.org/cessda/cessda.cvs.two markdownlint:
         commands:
-        - /usr/bin/env sh .sqa/script.thirsty-goldenrod-abyssinian.sh
-        container: qc.doc_sleazy-seashell-dragonfly
+        - /usr/bin/env sh .sqa/script.leaky-aqua-mongoose.sh
+        container: qc.doc_gamy-denim-dunker
   QC.Lic:
     repos:
-      github.com/indigo-dc/udocker licensee:
+      bitbucket.org/cessda/cessda.cvs.two licensee:
         commands:
-        - /usr/bin/env sh .sqa/script.stealthy-auburn-maltese.sh
-        container: qc.lic_leaky-auburn-chipmunk
+        - /usr/bin/env sh .sqa/script.snippy-brass-rhinoceros.sh
+        container: qc.lic_lousy-khaki-terrier
   QC.Met:
     repos:
-      github.com/indigo-dc/udocker validate_codemeta:
+      bitbucket.org/cessda/cessda.cvs.two cff-converter-python:
         commands:
-        - /usr/bin/env sh .sqa/script.greasy-cerulean-zonkey.sh
-        container: qc.met_bluesy-cream-kiwi
-  QC.Sec:
-    repos:
-      github.com/indigo-dc/udocker bandit:
-        commands:
-        - /usr/bin/env sh .sqa/script.ready-bronze-bongo.sh
-        container: qc.sec_gimpy-wheat-barb
+        - /usr/bin/env sh .sqa/script.shaky-denim-tapir.sh
+        container: qc.met_gamy-myrtle-earwig
   QC.Sty:
     repos:
-      github.com/indigo-dc/udocker flake8:
+      bitbucket.org/cessda/cessda.cvs.two checkstyle:
         commands:
-        - /usr/bin/env sh .sqa/script.chummy-khaki-eagle.sh
-        container: qc.sty_greasy-celadon-shrew
-      github.com/indigo-dc/udocker jsonlint:
+        - /usr/bin/env sh .sqa/script.skinny-chartreuse-chinook.sh
+        container: qc.sty_queasy-tomato-okapi
+      bitbucket.org/cessda/cessda.cvs.two jsonlint:
         commands:
-        - /usr/bin/env sh .sqa/script.whiny-purple-tuatara.sh
-        container: qc.sty_gamy-rose-pig
+        - /usr/bin/env sh .sqa/script.leaky-alizarin-bombay.sh
+        container: qc.sty_grumpy-scarlet-pinscher
+      bitbucket.org/cessda/cessda.cvs.two stylelint:
+        commands:
+        - /usr/bin/env sh .sqa/script.wimpy-burgundy-birman.sh
+        container: qc.sty_homely-platinum-tiger
   QC.Ver:
     repos:
-      github.com/indigo-dc/udocker get_git_tags.py:
+      bitbucket.org/cessda/cessda.cvs.two get_git_tags.py:
         commands:
-        - /usr/bin/env sh .sqa/script.snazzy-cyan-grouse.sh
-        container: qc.ver_squeaky-ruby-zebu
+        - /usr/bin/env sh .sqa/script.gamy-magenta-collie.sh
+        container: qc.ver_sunny-gold-chimpanzee
 timeout: 1800
