--- a/.sqa/config.yml
+++ b/.sqa/config.yml
@@ -15,52 +15,52 @@ sqa_criteria:
     repos:
       bitbucket.org/cessda/cessda.cvs.two git:
         commands:
-        - /usr/bin/env sh .sqa/script.droopy-red-greyhound.sh
-        container: qc.acc_silly-persimmon-uakari
+        - /usr/bin/env sh .sqa/script.snoopy-sepia-hummingbird.sh
+        container: qc.acc_clammy-apricot-fox
   QC.Doc:
     repos:
       bitbucket.org/cessda/cessda.cvs.two find_doc_files.py:
         commands:
-        - /usr/bin/env sh .sqa/script.craggy-cream-spaniel.sh
-        container: qc.doc_blurry-bistre-dollar
+        - /usr/bin/env sh .sqa/script.chewy-brass-goose.sh
+        container: qc.doc_stealthy-scarlet-sheep
       bitbucket.org/cessda/cessda.cvs.two git:
         commands:
-        - /usr/bin/env sh .sqa/script.blurry-chocolate-bandicoot.sh
-        container: qc.doc_slimy-pink-kingfisher
+        - /usr/bin/env sh .sqa/script.snippy-ultramarine-seal.sh
+        container: qc.doc_slimy-yellow-chicken
       bitbucket.org/cessda/cessda.cvs.two markdownlint:
         commands:
-        - /usr/bin/env sh .sqa/script.goopy-sepia-fly.sh
-        container: qc.doc_tasty-eggplant-toucan
+        - /usr/bin/env sh .sqa/script.paltry-heliotrope-turtle.sh
+        container: qc.doc_woolly-harlequin-mongrel
   QC.Lic:
     repos:
       bitbucket.org/cessda/cessda.cvs.two licensee:
         commands:
-        - /usr/bin/env sh .sqa/script.foggy-fuchsia-iguana.sh
-        container: qc.lic_beady-ochre-hummingbird
+        - /usr/bin/env sh .sqa/script.stinky-corn-stoat.sh
+        container: qc.lic_cranky-beige-retriever
   QC.Met:
     repos:
       bitbucket.org/cessda/cessda.cvs.two cff-converter-python:
         commands:
-        - /usr/bin/env sh .sqa/script.shaggy-amber-urchin.sh
-        container: qc.met_tacky-ruby-mole
+        - /usr/bin/env sh .sqa/script.cozy-amber-fly.sh
+        container: qc.met_randy-cerulean-dugong
   QC.Sty:
     repos:
       bitbucket.org/cessda/cessda.cvs.two checkstyle:
         commands:
-        - /usr/bin/env sh .sqa/script.squeaky-auburn-saola.sh
-        container: qc.sty_sloppy-dandelion-quoll
+        - /usr/bin/env sh .sqa/script.boozy-blue-chow.sh
+        container: qc.sty_gloppy-goldenrod-sheepdog
       bitbucket.org/cessda/cessda.cvs.two jsonlint:
         commands:
-        - /usr/bin/env sh .sqa/script.lumpy-eggplant-lynx.sh
-        container: qc.sty_woolly-green-bonobo
+        - /usr/bin/env sh .sqa/script.hilly-lime-heron.sh
+        container: qc.sty_snazzy-cardinal-lion
       bitbucket.org/cessda/cessda.cvs.two stylelint:
         commands:
-        - /usr/bin/env sh .sqa/script.woozy-buff-impala.sh
-        container: qc.sty_bumpy-cornflower-mongoose
+        - /usr/bin/env sh .sqa/script.sunny-cream-bobcat.sh
+        container: qc.sty_clammy-fuchsia-buzzard
   QC.Ver:
     repos:
       bitbucket.org/cessda/cessda.cvs.two get_git_tags.py:
         commands:
-        - /usr/bin/env sh .sqa/script.crabby-bronze-malamute.sh
-        container: qc.ver_beady-chartreuse-clam
+        - /usr/bin/env sh .sqa/script.ready-heliotrope-ostrich.sh
+        container: qc.ver_thirsty-olivine-flamingo
 timeout: 1800
